--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -5,3 +5,7 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+<h1>Hello from Blazor!</h1>
+<p>This is your Mood Weather Journal homepage.</p>
+
