changing necessary files

--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -6,6 +6,6 @@
 
 Welcome to your new app.
 
-<h1>Hello from Blazor!</h1>
-<p>This is your Mood Weather Journal homepage.</p>
+@* <h1>Hello from Blazor!</h1>
+<p>This is your Mood Weather Journal homepage.</p> *@
 
